--- a/index.html
+++ b/index.html
@@ -2,11 +2,21 @@
 
 <html lang="en">
     <head>
-   
+        <title>US Shark Attacks</title>
+        <link rel="stylesheet" href="style.css">
       </head>
-      
       <body>
-   
+        <div class="banner">
+        <div class="navbar">
+            <img src="logo.gif" class="logo">
+            <ul>
+                <li><a href="#">pageone</a></li>
+                <li><a href="#">pagetwo</a></li>
+                <li><a href="#">pagethree</a></li>
+                <li><a href="#">pagefour</a></li>
+            </ul>
+        </div>
+        </div>
       </body>
       
       </html>
