--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 
 <html lang="en">
     <head>
-        <title>US Shark Attacks</title>
+      <link rel=”stylesheet” href=”https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity=”sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T” crossorigin=”anonymous”>
+      <script src=”app.js”></script>  
+      <title>US Shark Attacks</title>
         <link rel="stylesheet" href="style.css">
       </head>
       <body>
@@ -14,8 +16,8 @@
                 <li><a href="#">pagetwo</a></li>
                 <li><a href="#">pagethree</a></li>
                 <li><a href="#">pagefour</a></li>
-            </ul>
-        </div>
+              </ul>
+  
         </div>
       </body>
       
