--- a/index.html
+++ b/index.html
@@ -2,12 +2,20 @@
 
 <html lang="en">
     <head>
-      <link rel=”stylesheet” href=”https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity=”sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T” crossorigin=”anonymous”>
+      <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+<script src="https://cdn.ploty.ly/plotly-latest.min.js"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
+  <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
       <script src=”app.js”></script>  
+      <link rel="stylesheet" href="style.css">
       <title>US Shark Attacks</title>
-        <link rel="stylesheet" href="style.css">
+  
       </head>
       <body>
+        <div id="graph"></div>
         <div class="banner">
         <div class="navbar">
             <img src="logo.gif" class="logo">
