--- a/index.html
+++ b/index.html
@@ -20,13 +20,16 @@
         <div class="navbar">
             <img src="logo.gif" class="logo">
             <ul>
-                <li><a href="#">pageone</a></li>
-                <li><a href="#">pagetwo</a></li>
-                <li><a href="#">pagethree</a></li>
-                <li><a href="#">pagefour</a></li>
+                <li><a href="#">Michele Allen</a></li>
+                <li><a href="#">Orlando Leckie</a></li>
+                <li><a href="#">Rick Martinez</a></li>
+                <li><a href="#">Verenice Vargas</a></li>
               </ul>
   
         </div>
+        <center><iframe src="/graphs/activities.html" height="800" width="1200"frameBorder="0"></iframe></center>
+        <center><iframe src="/graphs/sharkfatal.html" height="800" width="1200"frameBorder="0"></iframe></center>
+        <center><iframe src="/graphs/countries.html" height="800" width="1200"frameBorder="0"></iframe></center>
       </body>
       
       </html>
